<resources>
    <string name="app_name">DiscMath</string>
    <string name="theory">Теорія</string>
    <string name="exercises">Задачі</string>
    <string name="problem">Задача</string>
    <string name="skip">Пропустити</string>

    <string name="videoOptionTitle">Подивитися в записі</string>
    <string name="pdfTypeTitle">Переглянути в PDF</string>
    <string name="pdf_icon_description">PDF</string>
    <string name="video_icon_description">Значок відео</string>
    <string name="training_encouragement">Задачі</string>
    <string name="start_training_button_text">Розпочати</string>
    <string name="app_logo_splash_screen">App logo splash screen</string>
    <string name="all_sections_training_type_title">Усі теми</string>
    <string name="choose_sections_training_type_title">Обрати теми</string>
    <string name="choose_training_type_title">Оберіть тип тренування</string>
    <string name="choose_sections_continue_button">Далі</string>
    <string name="selected_item_icon">Обраний</string>
    <string name="quiz_preferences_summary_text">Налаштування тесту</string>
    <string name="start_quiz_button_text">Розпочати</string>
    <string name="quiz_summary_sections_number_text">
        Обрано тем: %1$d
    </string>
    <string name="quiz_summary_sections_time">
        Час тренування: %1$s
    </string>

    <string name="yes_button_text">Так</string>
    <string name="no_button_text">Ні</string>
    <string name="problem_image_description">Задача</string>
    <string name="skip_button_text">Пропустити</string>
    <string name="quiz_results_title">Результати</string>
    <string name="quiz_results_come_back_button_text">Назад</string>
    <string name="trophy_image_description">Trophy image</string>
    <string name="quiz_results_summary_text">Правильні відповіді: %1$d з %2$d</string>
    <string name="explanation_title">Пояснення</string>
    <string name="verify_button_text">Перевірити</string>
    <string name="set_theory_quiz_title">Наведіть приклади множин, для яких виконується рівність</string>
    <string name="universal_set_symbol" translatable="false">Ω</string>
    <string name="universal_set_additional_elements" translatable="false">Ω+</string>
    <string name="expand_arrow_down_description">Розгорнути</string>
    <string name="quiz_section_result_correct_answers_title">Правильні відповіді:</string>
    <string name="quiz_section_correct_answers">%1$d з %2$d</string>
    <string name="choose_time_type_title">Оберіть час тренування</string>
    <string name="theory_title">Теорія</string>
    <string name="lets_go">Уперед!</string>
    <string name="learning_section_selection_title">Виберіть теми:</string>
    <string name="assistant_title">Антитренажер</string>
    <string name="problem_answer">Відповідь</string>

    <string name="logic_calculate_button">Обрахувати</string>
    <string name="logic_title">Вкажіть вираз F:</string>
    <string name="logic_CNF_title">Кон\'юктивна нормальна форма</string>
    <string name="logic_DNF_title">Диз\'юнктивна нормальна форма</string>
    <string name="graph_theory_modify_option_description">Режим редагування</string>
    <string name="graph_theory_move_option_description">Режим переміщення</string>
    <string name="graph_theory_edge_option_description">Режим додавання ребер</string>
    <string name="timestamps_absent_text">Це відео не має таймкодів</string>
    <string name="timestamps_network_error">Помилка мережі, спробуйте ще раз</string>
    <string name="logic_conjunction" translatable="false">∧</string>
    <string name="logic_disjunction" translatable="false">∨</string>
    <string name="logic_implication" translatable="false">→</string>
    <string name="logic_negation" translatable="false">!</string>
    <string name="logic_xor" translatable="false">⊕</string>
    <string name="logic_equivalence" translatable="false">↔</string>
    <string name="remove">Видалити</string>

    <string name="logic_tautology_formula">тавтологією</string>
    <string name="logic_satisfiable_formula">виконливою</string>
    <string name="logic_contradiction_formula">суперечністю</string>
    <string name="logic_formula_property_title">Ця формула є %1$s</string>

    <string name="assistant_option_logic_title">Числення висловлювань</string>
    <string name="assistant_option_graph_theory_title">Теорія графів</string>

    <string name="quiz_test_section_name">Тести за темами</string>
    <string name="quiz_logic_game_section_name">Числення висловлювань</string>

    <string name="graph_builder_finish_button_description">Продовжити</string>
    <string name="graph_actions_title_text">Що далі?</string>

    <!--First level-->
    <string name="graph_action_unary_operations">Унарні операції</string>
    <string name="graph_action_binary_operations">n-арні операції</string>
    <string name="graph_action_new_graph">Побудувати інший граф</string>
    <string name="graph_builder_export_to_png">Зберегти</string>

    <!--Unary operations-->
    <string name="graph_unary_operation_connected_components">Компоненти зв\'язності</string>
    <string name="graph_unary_operation_cut_vertices">Точки з\'єднання</string>
    <string name="graph_unary_operation_bridges">Мости</string>

    <!--Binary operations-->
    <string name="graph_binary_operation_union">Об\'єднання графів</string>
    <string name="graph_binary_operation_join">Сума графів</string>

    <!--Intent-->
    <string name="graph_builder_export_to_png_intent_title">Поділитися графом</string>

    <string name="graph_history_counter">%1$d / %2$d</string>
    <string name="graph_history_selector_title">Обрано графів: %1$d</string>

    <!--Dialogs-->
    <string name="graph_extreme_size_message">
        Ви обрали занадто багато графів або вони завеликі, оперативна пам\'ять Вашого телефона такого не витримає</string>
    <string name="graph_binary_operations_require_at_least_two_graphs">
        Для обчислення n-арних операцій потрібно принаймні 2 графи
    </string>
    <string name="understand_button_text">Зрозуміло</string>

    <string name="graph_image_description">Зображення графа</string>
    <string name="functions_title">Можливості:</string>

    <string name="learning_section_transition_name">learning_section</string>
    <string name="lecture_title_transition_name">lecture_title</string>
    <string name="switch_description">Перемикач</string>

    <string name="finish_quiz_dialog_title">Закінчити тренування?</string>
    <string name="finish_quiz_dialog_confirm_text">Закінчити</string>
    <string name="finish_quiz_dialog_reject_text">Продовжити</string>
    <string name="graph_history_title">Історія</string>
    <string name="history_counter_default">Поки тут немає графів :)</string>
    <string name="next">Далі</string>
    <string name="graph_selected_description">Обрано</string>
    <string name="logic_formula_name">Вираз:</string>
    <string name="confirm">Підтвердити</string>
    <string name="clear">Очистити</string>

    <string name="truth_table_is_correct_button_confirm_text">Усе правильно</string>
    <string name="truth_table_is_correct_error_message">Таблиця істинності правильна</string>

    <string name="pdf_failure_dialog_title">Помилка під час завантаження</string>
    <string name="pdf_failure_dialog_description">Трапилась помилка під час завантаження pdf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>