<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.quiz_fragment.QuizResultsFragment">

    <TextView
        android:id="@+id/quiz_results_title"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:layout_marginTop="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_results_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quiz_results_summary_card"
        android:layout_marginTop="60dp"
        android:layout_width="320dp"
        android:layout_height="240dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="5dp"
        >

        <TextView
            android:id="@+id/quiz_results_summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_results_summary_text"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/quiz_results_image"
            android:src="@drawable/trophy"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/trophy_image_description"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:fadingEdge="horizontal"
            />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/quiz_results_come_back_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/quiz_results_come_back_button_text"/>

</LinearLayout>