<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/problem_image_yes_no_quiz"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/problem_image_description"
        android:elevation="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/yes_button_yes_no_quiz"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:elevation="4dp"
        android:backgroundTint="#009688"
        android:text="@string/yes_button_text" />

    <Button
        android:id="@+id/no_button_yes_no_quiz"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        android:backgroundTint="#BC5130"
        android:text="@string/no_button_text" />
</LinearLayout>