<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbox_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:baselineAligned="false"
    android:elevation="15dp"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/graph_builder_modify_mode_option"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/left_rounded">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/graph_theory_modify_option_description"
            android:src="@drawable/circle_background" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/graph_builder_edge_mode_option"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/graph_theory_edge_option_description"
            android:src="@drawable/edge" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/graph_builder_move_option"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/right_rounded"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/graph_theory_move_option_description"
            android:src="@drawable/move" />

    </FrameLayout>

</LinearLayout>