<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logic_calculation_results"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/logic_calculate_button">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F3F3F3"
        android:elevation="2dp"
        >

        <TextView
            android:id="@+id/logic_formula_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/logic_formula_property_title"
            android:textColor="@color/black" />

    </FrameLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerThickness="0.2dp"
        app:dividerColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/logic_CNF_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:fillViewport="true"
        >

        <TextView
            android:id="@+id/CNF_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            />

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/logic_DNF_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:fillViewport="true"
        >

        <TextView
            android:id="@+id/DNF_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            />

    </HorizontalScrollView>

</LinearLayout>
