<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quizzes.choose_sections.ChooseTrainingTypeFragment"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/training_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/choose_training_type_title"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/training_choose_sections_options"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="40dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_type_text">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#2196F3">

            <TextView
                android:id="@+id/training_choose_sections_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_sections_training_type_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/training_random_type_option"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_choose_sections_options">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/training_random_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/all_sections_training_type_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>